fixed the misalignment in the profile page

--- a/accounts/static/accounts/css/style.css
+++ b/accounts/static/accounts/css/style.css
@@ -508,7 +508,7 @@ body {
 }
 
 .main-content {
-  margin-left: 260px;
+  /* margin-left: 260px; */
 }
 @media screen and (max-width: 991px) {
   .main-content {
